# xyplot-sdk

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
backends/blend2d/: blend2d_device.h
backends/recording/: recording_device.h
backends/svg/: svg_device.h
docs/: 00-executive-summary.md  01-requirements-clarification.md  02-technical-assessment.md  03-solution-proposal.md  04-roadmap.md  05-po-review-opinion.md  06-po-review-response.md  07-agent-coordination.md  08-bug-tracker.md  API_REFERENCE.md  integration-contract.md  interface-freeze.md
examples/blend2d_demo/: blend2d_render_device.h  main.cpp
examples/minimal/: main.cpp
examples/qt_backend/: main.cpp  qt_render_device.h
examples/svg_gallery/: main.cpp
include/xyplot/: iinput_source.h  irender_device.h  plot.h  types.h  xyplot.h
scripts/: gate-check.sh
src/: area_plot.cpp  axis_system.cpp  axis_system.h  bar_plot.cpp  contour.cpp  contour_algorithm.cpp  contour_algorithm.h  coordinate_transform.cpp  coordinate_transform.h  datatable.cpp  datatable.h  error_bar.cpp  heatmap.cpp  histogram.cpp  hit_test.cpp  hit_test.h  layout_engine.cpp  layout_engine.h  legend_renderer.cpp  line_plot.cpp  multi_axis.cpp  plot.cpp  plot_impl.h  plot_interaction.cpp  plot_registry.cpp  polar_plot.cpp  polar_transform.cpp  polar_transform.h  scatter_plot.cpp  step_plot.cpp  xyplot_internal.h
status/: README.md  agent-a-status.md  agent-b-status.md  agent-c-status.md  agent-d-status.md  agent-e-status.md  agent-f-status.md  bulletin.md  daily-report-2026-05-31.md
tests/: test_axis.cpp  test_contour.cpp  test_datatable.cpp  test_integration.cpp  test_interface_contract.cpp  test_performance.cpp  test_plots.cpp  test_polar.cpp  test_transform.cpp
